src/style.css
body {
	font-family: Helvetica, Helvetica Neue, Arial, sans-serif; 
	background-image: url('img/ai-bg.jpg');	
	background-repeat: repeat-y;
	background-size: 100%;
}
@media (max-width: 575px) {
	body.p-4 {
		padding: 0.7rem !important;
	}
}
.curve {
	border-top-right-radius: 100px;
	border-bottom-left-radius: 100px;
	overflow: clip;
}
@media (max-width: 991px) {
	.curve {
		border-top-right-radius: 50px;
		border-bottom-left-radius: 50px;
	}
}
a {
	color: #000000;
	text-decoration: none;
	transition: opacity 0.2s ease;
}
a:hover {
	opacity: 0.7;
}
h1,
.h1 {
	font-size: 4.375rem;
	font-weight: bold;
	letter-spacing: -1px;
	line-height: 1.1;
}
@media (min-width: 768px) and (max-width: 991px)  {
	h1,
	.h1 {
		font-size: 2.8rem;
	}
}
@media (min-width: 768px) and (max-height: 730px) {
	h1 {
		font-size: 3.8rem;
		padding-top: 0 !important;
	}
}
@media (max-width: 767px) {
	h1,
	.h1 {
		font-size: 2.08rem;
	}
}
h2,
.h2 {
	font-size: 1.625rem;
	font-weight: bold;
	letter-spacing: -0.2px;
	line-height: 1.26;
}
@media (max-width: 991px) {
	h2,
	.h2 {
		font-size: 1.6rem;
	}
}
h3,
.h3 {
	font-size: 1.556rem;
	font-weight: bold;
	line-height: 1.2;
	letter-spacing: -0.5px;
}
@media (max-width: 991px) {
	h3,
	.h3 {
		font-size: 1.5rem;
	}
}
h4,
.h4 {
	font-size: 1.1rem;
	font-weight: bold;
}
h5,
.h5 {
	font-size: 0.938rem;
	font-weight: bold;
}
h6,
.h6 {
	font-family: Helvetica, Helvetica Neue, Arial, sans-serif; 
	font-weight: bold;
	font-size: 1rem;
	line-height: 1.2;
	text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.32);
}
.display-1 {
	font-size: 3.5rem;
	font-weight: bold;
	line-height: 1.2;
}
@media (max-width: 991px) {
	.display-1 {
		font-size: 2rem;
	}
}
.display-2 {
	font-size: 2.25rem;
	font-weight: bold;
	line-height: 1.3;
}
@media (max-width: 991px) {
	.display-2 {
		font-size: 1.8rem;
	}
}
.display-3 {
	font-size: 1.4375rem;
	font-weight: normal;
	letter-spacing: 1px;
	line-height: 1.43;
}
@media (max-width: 991px) {
	.display-3 {
		font-size: 1.2rem;
	}
}
.display-5 {
	font-size: 1.7rem;
	line-height: 1.3;
}
@media (max-width: 991px) {
	.display-5 {
		font-size: 1.1rem;
	}
}
@media (min-width: 992px) and (max-height: 730px) {
	.display-5 {
		font-size: 1.6rem;
	}
}
.display-6 {
	font-size: 0.875rem;
	font-weight: normal;
	line-height: 1.23;
	letter-spacing: 0.2px;
}
cite,
.source,
.xs {
	font-size: 0.812rem;
}
.not-by-ai-folder {
	filter: drop-shadow(0px 0px 12px rgba(0, 0, 0, 0.3));
}
@supports (-webkit-touch-callout: none) {
	.not-by-ai-folder {
		filter: none;
	}
}
.not-by-ai-folder-wrapper:hover{
	background: #EDEDED;
	box-shadow: inset 0 0 0px 4px #F9F9F9;
}
.bg-black .not-by-ai-folder-wrapper:hover{
	background: #212529;
	box-shadow: inset 0 0 0px 4px #444444;
}
@media (min-width: 992px) {
	.not-by-ai-folder-wrapper:hover + .download-link-wrapper .download-link {
		background: #EDEDED;
		box-shadow: inset 0 0 0px 4px #F9F9F9;
	}
	.bg-black .not-by-ai-folder-wrapper:hover + .download-link-wrapper .download-link {
		background: #212529;
		box-shadow: inset 0 0 0px 4px #444444;
	}
}
.bg-light {
	background-color: #f9f8f7 !important;
}
.bg-dark {
	background-color: #292929 !important;
}
[class*="border-"] {
	border-color: #EAEAEA !important;
}
.rounded {
	border-radius: 12px !important;
}
.btn {
	color: #FFFFFF;
	width: auto;
	background-color: #000000;
	padding: 0.6rem 2.8rem;
	border: 0;
	border-radius: 0;
}
.btn-white {
	color: #000000;
	width: auto;
	background-color: #FFFFFF;
	padding: 0.6rem 2.8rem;
	border: 0;
	border-radius: 0;
}
.btn:hover,
.btn:focus,
.btn:active,
.btn:first-child:active,
:not(.btn-check)+.btn:active {
	color: #FFFFFF;
	background-color: #333333;
}
.btn-white:hover,
.btn-white:focus,
.btn-white:active,
.btn-white:first-child:active,
:not(.btn-check)+.btn-white:active {
	color: #000000;
	background-color: #EDEDED;
}
nav {
	font-size: 0.875rem;
}
@media (min-width: 992px) {
	.download-popup {
		background-image: url('img/not-bi-ai-badge-download-examples.svg'); 
		background-position: bottom right; 
		background-repeat: no-repeat;
	}
}
@media (max-width: 991px) {
	.download-popup {
		background-image: url('img/not-bi-ai-badge-download-examples.svg'); 
		background-position: bottom right; 
		background-repeat: no-repeat;
		background-size: 50%;
	}
}
@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
.logo-feature-request-bar {
	opacity: 0;
	animation: fadeIn 0.5s ease-in 6s forwards;
}
#slide-left,
#slide-right {
	transition: opacity 0.9s ease-in-out;
}
img[class*="share__"]:hover {
	opacity: 1 !important;
}
.cursor-pointer {
	cursor: pointer;
}
.fade-in-move-up {
	animation: fadeInMoveUp 0.7s ease-out forwards;
}
#artist-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.6s;
}
#writer-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.7s;	
}
#producer-badge .fade-in-move-up {
	opacity: 0;
	animation-delay: 0.8s;
}
@keyframes fadeInMoveUp {
  0% { opacity: 0; transform: translateY(10px); }
  50% { opacity: 1; transform: translateY(0px); }
  70% { opacity: 1; transform: translateY(5px); }
  100% { opacity: 1; transform: translateY(0px); }
}
@media (max-width: 325px) {
	.not-by-ai-badge-folder img:last-child {
	  display: none !important;
	}
}
.sliding-background {
  background: url("img/not-by-ai-rotate.svg") repeat-x;
  height: 42px;
  width: 4881px;
  animation: loopX 80s linear infinite;
}
.sliding-background-l {
  background: url("img/not-by-ai-placement-examples.jpg") repeat-x bottom;
  height: 205px;
  width: 4944px;
  animation: loopX 200s linear infinite;
}
.sliding-background--trans {
	background: url("img/not-by-ai-rotate-transparent.svg") repeat-x;
}
/* ... */

